--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <router-outlet class="position-relative">
 </router-outlet>
-<ng-container *ngIf="rout.url !=='/home'">
+<ng-container *ngIf="rout.url !=='/' && rout.url !=='/home'">
     <i class='bx bx-arrow-back' routerLink="/home"></i>
 </ng-container>
 
